Fix cursor pagination for categories
