# go-server/docs/swagger.yaml
@@ -241,6 +241,10 @@ paths:
         in: query
         name: category_number
         type: integer
+      - description: category_name
+        in: query
+        name: category_name
+        type: string
       produces:
       - application/json
       responses:
